# Optimus

Optimus-master/: .gitignore  CMakeLists.txt  README.md  ai_optimizer_bridge.py  app.py  commands.txt  evaluate_agent.py  main.cpp  optimizer_env.py  requirements.txt  run_optimizer.py  run_with_llvm.bat  setup_llvm.py  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  train_rl_agent.py
Optimus-master/llvm_wrapper/: __init__.py
Optimus-master/rl_optimizer/: agent.py  new_env.py  optimizer_env.py  reward.py  train.py
